# ntv-webcam-scraper

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: build.yml
ntvwebcamscraper/: __main__.py  ai_analysis.py  config.py  database.py  models.py  timelapse.py  webcams.py
ntvwebcamscraper/cmd/: __init__.py  migrate.py  timelapse.py
ntvwebcamscraper/migrations/: env.py
ntvwebcamscraper/migrations/versions/: b496ba6351e9_initial_migration.py
